Fixed product details overflow bug

--- a/Client/src/assets/styles/Product.scss
+++ b/Client/src/assets/styles/Product.scss
@@ -1,5 +1,4 @@
 .product {
-    height: 150px;
     width: 22%;
     min-width: 150px;
     border-radius: 5px;
